Changed Contact form to fit in with rest of site and added small changes to fix mistakes I previously made
Wrote in jsx 'for' instead of 'htmlFor' and styles such as text-align which should be textAlign which is now all changed. I also added padding to the menu display so the buttons would be more centered and closer together and changed styles for recent posts as the cursor would not go into pointer mode if it was over the text in the center of the image.There was also a small issue with text overlaping in the recent images when the width is very small which was simply fixed by putting overflow as hidden

--- a/src/Components/styles.scss
+++ b/src/Components/styles.scss
@@ -243,7 +243,7 @@ footer{
 }
 
 a{
-    color:hsl(273, 4%, 51%);
+    color:darkgrey;
     cursor: pointer;
     text-decoration: none;
 }
@@ -375,17 +375,19 @@ img{
     right: 0%;
     background-color: hsl(256, 26%, 20%);
     z-index: 3;
-    padding: 20px;
     box-sizing: border-box;
-    
+    padding-top: 20%;
+    padding-bottom: 20%;
+
 }
 #overlay a{
-    margin: 0 auto;
+    margin: auto;
     font-size: 2em;
-    a:hover{
-        color: #f1f1f1;
+    &:hover{
+        color: white;
     }
 }
+
 
 #closeMenu{
     position: absolute;
@@ -417,6 +419,9 @@ img{
         margin-bottom: 0;
         font-size: 2em;
     }
+    picture > img{
+        max-height: 60vh;
+    }
 }
 
 .blogContent{
@@ -432,10 +437,14 @@ img{
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;
+    overflow: hidden;
+    max-width: 100%;
 }
 
-.popularPosts li .image:hover {
-    opacity: 0.3;
+.popularPosts li:hover {
+    .image{
+        opacity: 0.3;
+    }
 }
 
 
@@ -445,6 +454,8 @@ img{
     width: 100%;
     height: 100%;
     z-index: 0;
+    overflow: hidden;
+    cursor: pointer;
 }
 
 .pager{
@@ -484,10 +495,10 @@ img{
     margin: auto;
     width:80%;
     display: grid;
-    background-color: white;
+    background-color: $purple-color;
     padding: 20px;
-    border-radius: 20px;
-    color: black;
+    border-radius: 5px;
+    color: white;
     font-weight: 700;
     .contactForm h3{
         margin: auto;
@@ -495,8 +506,23 @@ img{
     .contactForm label{
     padding: 20px;
     }
+    input, textarea{
+        background-color: #131127;
+        outline: none;
+        border-style: none;
+        
+    }  
+    textarea{
+        width: 100%;
+        height: 200px;
+        color: grey;
+        font-size: 15px;
+    }
+    #message{
+        padding-top: 0;
+        padding-bottom: 0;
+    }
 }
-
 
 
 label input{
@@ -524,7 +550,8 @@ label input{
     gap: 10px;
     #top, #bottom{
         width: 2em;
-        height: 4vh;
+        cursor: pointer;
+        height: 5vh;
         background: none;
         outline: none;
         border-style: none;
@@ -534,4 +561,8 @@ label input{
             fill: white;
         }
     }
+}
+
+.allPosts{
+    max-width:1200px;
 }
